--- a/analysis/gs_scraper.ipynb
+++ b/analysis/gs_scraper.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Google Scholar Scraper\n",
-    "Scraping Google Scholar citations based on replication dataset"
+    "Scraping Google Scholar citations based on replication dataset utilizing Playwright to search the page, NopeCHA to get past any CAPTCHAs and BeautifulSoup to scrape HTMLs"
    ]
   },
   {
@@ -139,7 +139,8 @@
    "metadata": {},
    "source": [
     "### Set up scraper\n",
-    "Loop through all articles and append data, getting citations and abstracts"
+    "Loop through all articles and append data, getting citations and abstracts\n",
+    "Note: this version FAILED after I discovered a nan in the list. To save time and risk of Google banning me, I started again with a second scraper below about mid-way through"
    ]
   },
   {
@@ -395,6 +396,14 @@
    "outputs": [],
    "source": [
     "gs_df.to_csv(\"../data/gs_scrape.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ec83f6d",
+   "metadata": {},
+   "source": [
+    "## Resets scraper without the nan that caused the failure"
    ]
   },
   {
@@ -745,7 +754,8 @@
    "id": "58154736-97cd-494b-8b8f-fb434c3bcca0",
    "metadata": {},
    "source": [
-    "### Aggregate"
+    "### Aggregate and join\n",
+    "Takes the two successful dfs and concats before joining back to original df"
    ]
   },
   {
@@ -758,57 +768,6 @@
     "gs_df = pd.read_csv(\"../data/gs_scrape.csv\")\n",
     "gs_df_2 = pd.read_csv(\"../data/gs_scrape_2.csv\")\n",
     "gs_df_full = pd.concat([gs_df, gs_df_2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "cdf0ba80-5f32-4b80-9cb8-24a51755e6b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "object\n",
-      "object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(gs_df_full['ref_original'].dtype)\n",
-    "print(article_df['ref_original'].dtype)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "595c834a-0a64-4a82-8d4c-022331116519",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "object\n",
-      "object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(gs_df_full['ref_original'].dtype)\n",
-    "print(article_df['ref_original'].dtype)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "3e5b6733-4480-4a4d-bfa5-50f5f4d3f67f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "article_df['ref_original'] = article_df['ref_original'].astype(str)\n",
-    "gs_df_full['ref_original'] = gs_df_full['ref_original'].astype(str)\n"
    ]
   },
   {
@@ -849,294 +808,6 @@
     "                    on=\"ref_original\", \n",
     "                    how='left')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "7c6dbc1f-97b7-47fd-b9c0-ac68147bf0ad",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>description</th>\n",
-       "      <th>tags</th>\n",
-       "      <th>contributors</th>\n",
-       "      <th>result</th>\n",
-       "      <th>ref_original</th>\n",
-       "      <th>ref_replication</th>\n",
-       "      <th>abstract</th>\n",
-       "      <th>cited_by_count</th>\n",
-       "      <th>gs_title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Incidental Haptic Sensations Influence Social ...</td>\n",
-       "      <td>Social Science Replication Project, Science, N...</td>\n",
-       "      <td>Lukas Röseler</td>\n",
-       "      <td>Failure</td>\n",
-       "      <td>Ackerman, J. M., Nocera, C. C., &amp; Bargh, J. A....</td>\n",
-       "      <td>Camerer, C. F., Dreber, A., Holzmeister, F., H...</td>\n",
-       "      <td>Touch is both the first sense to develop and a...</td>\n",
-       "      <td>942</td>\n",
-       "      <td>Incidental haptic sensations influence social ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Age-related changes in the episodic simulation...</td>\n",
-       "      <td>Adult, Aged, Aging [psychology], Female, Human...</td>\n",
-       "      <td>Vasquez</td>\n",
-       "      <td>Success</td>\n",
-       "      <td>Addis, D.R., Wong, A.T., &amp; Schacter, D.L. (200...</td>\n",
-       "      <td>Vásquez-Echeverría, A. (2023, September 28). R...</td>\n",
-       "      <td>Episodic memory enables individuals to recolle...</td>\n",
-       "      <td>888</td>\n",
-       "      <td>Age-related changes in the episodic simulation...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ventriloquist effect results from near-optimal...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>LR</td>\n",
-       "      <td>OS not significant</td>\n",
-       "      <td>Alais, D., &amp; Burr, D. (2004). The ventriloquis...</td>\n",
-       "      <td>Boyce, V., Mathur, M., &amp; Frank, M. C. (2023). ...</td>\n",
-       "      <td>Ventriloquism is the ancient art of making one...</td>\n",
-       "      <td>2406</td>\n",
-       "      <td>[HTML][HTML] The ventriloquist effect results ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Increasing and decreasing motor and cognitive ...</td>\n",
-       "      <td>Attention, Awareness, Cues, Culture, Decision ...</td>\n",
-       "      <td>Sonnleitner</td>\n",
-       "      <td>Failure</td>\n",
-       "      <td>Albarracín, D., Handley, I.M., Noguchi, K., Mc...</td>\n",
-       "      <td>Voracek, M., &amp; Sonnleitner, C. (2016, August 1...</td>\n",
-       "      <td>General action and inaction goals can influenc...</td>\n",
-       "      <td>141.0</td>\n",
-       "      <td>[HTML][HTML] Increasing and decreasing motor a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Disfluency engages analytic processing</td>\n",
-       "      <td>Many Labs 2</td>\n",
-       "      <td>Lukas Röseler</td>\n",
-       "      <td>OS not significant</td>\n",
-       "      <td>Alter, A. L., Oppenheimer, D. M., Epley, N., &amp;...</td>\n",
-       "      <td>Klein, R. A., Vianello, M., Hasselman, F., Ada...</td>\n",
-       "      <td>Humans appear to reason using two processing s...</td>\n",
-       "      <td>1395</td>\n",
-       "      <td>[HTML][HTML] Overcoming intuition: metacogniti...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>Perceiving four varieties of vegetables (carro...</td>\n",
-       "      <td>scarcity, abundance, preference within a choic...</td>\n",
-       "      <td>Kaiser, Leonard</td>\n",
-       "      <td>OS not significant</td>\n",
-       "      <td>Zhu, M., &amp; Ratner, R. K. (2015). Scarcity pola...</td>\n",
-       "      <td>O’Donnell, M., Dev, A. S., Antonoplis, S., Bau...</td>\n",
-       "      <td>This research examines how the salience of sca...</td>\n",
-       "      <td>177.0</td>\n",
-       "      <td>Scarcity polarizes preferences: The impact on ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>learning and remembering heirarchical relation...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>LR</td>\n",
-       "      <td>OS not significant</td>\n",
-       "      <td>Zitek, E. M., &amp; Tiedens, L. Z. (2012). The flu...</td>\n",
-       "      <td>Boyce, V., Mathur, M., &amp; Frank, M. C. (2023). ...</td>\n",
-       "      <td>We tested the hypothesis that social hierarchi...</td>\n",
-       "      <td>293.0</td>\n",
-       "      <td>The fluency of social hierarchy: the ease with...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>A social functional approach to emotions in ba...</td>\n",
-       "      <td>Adult, Anger, Communication, Deception, Domina...</td>\n",
-       "      <td>Slowik</td>\n",
-       "      <td>Failure</td>\n",
-       "      <td>van Dijk, E., van Kleef, G.A., Steinel, W., &amp; ...</td>\n",
-       "      <td>Voracek, M., &amp; Slowik, A. (2023, September 28)...</td>\n",
-       "      <td>Previous research on the communication of emot...</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>A social functional approach to emotions in ba...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>503</th>\n",
-       "      <td>The Best Men Are (Not Always) Already Taken: F...</td>\n",
-       "      <td>Adult, Choice Behavior, Female, Humans, Male, ...</td>\n",
-       "      <td>Frazier</td>\n",
-       "      <td>Failure</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>504</th>\n",
-       "      <td>Forewarnings significantly increase adjustment...</td>\n",
-       "      <td>adjustment, anchor, anchoring, anchoring effec...</td>\n",
-       "      <td>Sabine Krueger, Lukas Röseler, Hannah Luisa Bö...</td>\n",
-       "      <td>Failure</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>Röseler, L., Bögler, H. L., Koßmann, L., Krueg...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>505 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           description  \\\n",
-       "0    Incidental Haptic Sensations Influence Social ...   \n",
-       "1    Age-related changes in the episodic simulation...   \n",
-       "2    ventriloquist effect results from near-optimal...   \n",
-       "3    Increasing and decreasing motor and cognitive ...   \n",
-       "4               Disfluency engages analytic processing   \n",
-       "..                                                 ...   \n",
-       "500  Perceiving four varieties of vegetables (carro...   \n",
-       "501  learning and remembering heirarchical relation...   \n",
-       "502  A social functional approach to emotions in ba...   \n",
-       "503  The Best Men Are (Not Always) Already Taken: F...   \n",
-       "504  Forewarnings significantly increase adjustment...   \n",
-       "\n",
-       "                                                  tags  \\\n",
-       "0    Social Science Replication Project, Science, N...   \n",
-       "1    Adult, Aged, Aging [psychology], Female, Human...   \n",
-       "2                                                  NaN   \n",
-       "3    Attention, Awareness, Cues, Culture, Decision ...   \n",
-       "4                                          Many Labs 2   \n",
-       "..                                                 ...   \n",
-       "500  scarcity, abundance, preference within a choic...   \n",
-       "501                                                NaN   \n",
-       "502  Adult, Anger, Communication, Deception, Domina...   \n",
-       "503  Adult, Choice Behavior, Female, Humans, Male, ...   \n",
-       "504  adjustment, anchor, anchoring, anchoring effec...   \n",
-       "\n",
-       "                                          contributors              result  \\\n",
-       "0                                        Lukas Röseler             Failure   \n",
-       "1                                              Vasquez             Success   \n",
-       "2                                                   LR  OS not significant   \n",
-       "3                                          Sonnleitner             Failure   \n",
-       "4                                        Lukas Röseler  OS not significant   \n",
-       "..                                                 ...                 ...   \n",
-       "500                                    Kaiser, Leonard  OS not significant   \n",
-       "501                                                 LR  OS not significant   \n",
-       "502                                             Slowik             Failure   \n",
-       "503                                            Frazier             Failure   \n",
-       "504  Sabine Krueger, Lukas Röseler, Hannah Luisa Bö...             Failure   \n",
-       "\n",
-       "                                          ref_original  \\\n",
-       "0    Ackerman, J. M., Nocera, C. C., & Bargh, J. A....   \n",
-       "1    Addis, D.R., Wong, A.T., & Schacter, D.L. (200...   \n",
-       "2    Alais, D., & Burr, D. (2004). The ventriloquis...   \n",
-       "3    Albarracín, D., Handley, I.M., Noguchi, K., Mc...   \n",
-       "4    Alter, A. L., Oppenheimer, D. M., Epley, N., &...   \n",
-       "..                                                 ...   \n",
-       "500  Zhu, M., & Ratner, R. K. (2015). Scarcity pola...   \n",
-       "501  Zitek, E. M., & Tiedens, L. Z. (2012). The flu...   \n",
-       "502  van Dijk, E., van Kleef, G.A., Steinel, W., & ...   \n",
-       "503                                                nan   \n",
-       "504                                                nan   \n",
-       "\n",
-       "                                       ref_replication  \\\n",
-       "0    Camerer, C. F., Dreber, A., Holzmeister, F., H...   \n",
-       "1    Vásquez-Echeverría, A. (2023, September 28). R...   \n",
-       "2    Boyce, V., Mathur, M., & Frank, M. C. (2023). ...   \n",
-       "3    Voracek, M., & Sonnleitner, C. (2016, August 1...   \n",
-       "4    Klein, R. A., Vianello, M., Hasselman, F., Ada...   \n",
-       "..                                                 ...   \n",
-       "500  O’Donnell, M., Dev, A. S., Antonoplis, S., Bau...   \n",
-       "501  Boyce, V., Mathur, M., & Frank, M. C. (2023). ...   \n",
-       "502  Voracek, M., & Slowik, A. (2023, September 28)...   \n",
-       "503                                                NaN   \n",
-       "504  Röseler, L., Bögler, H. L., Koßmann, L., Krueg...   \n",
-       "\n",
-       "                                              abstract cited_by_count  \\\n",
-       "0    Touch is both the first sense to develop and a...            942   \n",
-       "1    Episodic memory enables individuals to recolle...            888   \n",
-       "2    Ventriloquism is the ancient art of making one...           2406   \n",
-       "3    General action and inaction goals can influenc...          141.0   \n",
-       "4    Humans appear to reason using two processing s...           1395   \n",
-       "..                                                 ...            ...   \n",
-       "500  This research examines how the salience of sca...          177.0   \n",
-       "501  We tested the hypothesis that social hierarchi...          293.0   \n",
-       "502  Previous research on the communication of emot...          307.0   \n",
-       "503                                                NaN            NaN   \n",
-       "504                                                NaN            NaN   \n",
-       "\n",
-       "                                              gs_title  \n",
-       "0    Incidental haptic sensations influence social ...  \n",
-       "1    Age-related changes in the episodic simulation...  \n",
-       "2    [HTML][HTML] The ventriloquist effect results ...  \n",
-       "3    [HTML][HTML] Increasing and decreasing motor a...  \n",
-       "4    [HTML][HTML] Overcoming intuition: metacogniti...  \n",
-       "..                                                 ...  \n",
-       "500  Scarcity polarizes preferences: The impact on ...  \n",
-       "501  The fluency of social hierarchy: the ease with...  \n",
-       "502  A social functional approach to emotions in ba...  \n",
-       "503                                                NaN  \n",
-       "504                                                NaN  \n",
-       "\n",
-       "[505 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result_df.to_csv(\"../data/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc87e85d-7dec-4df3-8851-a490f4dd72ef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
