finish up readme

--- a/analysis/gs_scraper.ipynb
+++ b/analysis/gs_scraper.ipynb
@@ -808,6 +808,16 @@
     "                    on=\"ref_original\", \n",
     "                    how='left')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d54e9115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df.to_csv(\"../data/replication_database.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
